--- a/ALAAARM/alAAARM.csproj
+++ b/ALAAARM/alAAARM.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Addons.cs" />
     <Compile Include="Alarm.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="FormAlaaarm.cs">
