--- a/ALAAARM/alAAARM.csproj
+++ b/ALAAARM/alAAARM.csproj
@@ -112,9 +112,15 @@
     <Compile Include="LoopingWaveStream.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormAlaaarm.en.resx">
+      <DependentUpon>FormAlaaarm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAlaaarm.resx">
       <DependentUpon>FormAlaaarm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAlaaarm.ru.resx">
+      <DependentUpon>FormAlaaarm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
